--- a/src/features/navbar/navbar.css
+++ b/src/features/navbar/navbar.css
@@ -10,11 +10,12 @@
 .logo {
     font-size: 1.5rem;
     font-weight: bold;
+    color: coral;
 }
 
 .right-corner {
     display: flex;
-    gap: 10px; /* Adjust the gap between buttons */
+    gap: 10px;
 }
 
 .login-btn,
@@ -22,12 +23,36 @@
     padding: 8px 16px;
     border: none;
     border-radius: 4px;
-    background-color: #007bff; /* You can adjust these colors */
+    background-color: #007bff;
     color: #fff;
     cursor: pointer;
 }
 
 .login-btn:hover,
 .signin-btn:hover {
-    background-color: #0056b3; /* Adjust hover color */
+    background-color: #0056b3;
 }
+.circle{
+    clip-path: circle(50px);
+}
+.avatar-name {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    background-color: coral;
+    color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+}
+
+.right-corner {
+    display: flex;
+    align-items: center;
+}
+
+.right-corner > * {
+    margin-right: 10px;
+}
+
