--- a/src/layout/drawer/drawer.css
+++ b/src/layout/drawer/drawer.css
@@ -1,41 +1,35 @@
-
-
 .flex-container {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
-
 .sidebar {
-    /*position: fixed;*/
-    /*top: 53px; !* Adjust according to your navbar height *!*/
-    /*left: 0;*/
-    width: 200px;
-    height: calc(100vh - 53px);
-    background-color: grey;
-    color: #fff;
-    /*padding-top: 20px;*/
-    /*overflow: hidden;*/
+
+  width: 200px;
+  height: calc(100vh - 53px);
+  background-color: grey;
+  color: #fff;
+
 }
 
 .sidebar ul {
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .sidebar ul li {
-    padding: 20px;
+  padding: 20px;
 }
 
 .sidebar ul li a {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
 .content {
-    margin-left: 200px; /* Adjust according to sidebar width */
-    padding: 20px;
+  margin-left: 200px;
+  padding: 20px;
 }
